--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style/style.css">
 </head>
+
 <body>
     <h3>Clima</h3>
-
-    <input type="text" placeholder="Insira o nome de sua cidade aqui" id="cidade">
-    <button id="enviar">Enviar</button>
+    <br>
+    <div id="cityInput">
+        <input type="text" placeholder="Insira o nome de sua cidade aqui" id="cidade">
+        <button id="enviar">Enviar</button>
+    </div>
 
     <div id="clima">
-        
+
     </div>
 </body>
+
 </html>
