feat: implemented jquery request

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="./style/style.css">
 </head>
 
@@ -13,12 +14,13 @@
     <br>
     <div id="cityInput">
         <input type="text" placeholder="Insira o nome de sua cidade aqui" id="cidade">
-        <button id="enviar">Enviar</button>
+        <button id="enviar" onclick="getWeather()">Enviar</button>
     </div>
-
+    <br>
     <div id="clima">
 
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
